# IEMPluginSuite

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  ChangeLog.md  InstallationGuide.txt  README.md  macOS_buildForRelease.sh
.git-ci/: gitlab-iem.yml
AllRADecoder/: CMakeLists.txt
AllRADecoder/Source/: AmbisonicNoiseBurst.h  EnergyDistributionVisualizer.h  LoudspeakerTableComponent.h  LoudspeakerVisualizer.h  NoiseBurst.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotateWindow.h  tDesign5200.h
BinauralDecoder/: CMakeLists.txt
BinauralDecoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
CoordinateConverter/: CMakeLists.txt
CoordinateConverter/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DirectionalCompressor/: CMakeLists.txt
DirectionalCompressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DirectivityShaper/: CMakeLists.txt
DirectivityShaper/Source/: DirectivityVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShapeAndOrderXyPad.h
DistanceCompensator/: CMakeLists.txt
DistanceCompensator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DualDelay/: CMakeLists.txt
DualDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
EnergyVisualizer/: CMakeLists.txt  hammerAitovSample.h  tDesignProjected.h  vertexIndex.h
EnergyVisualizer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VisualizerColormap.h  VisualizerComponent.h
FdnReverb/: CMakeLists.txt
FdnReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  T60Visualizer.h
GranularEncoder/: CMakeLists.txt  GranularEncoder.jucer
GranularEncoder/Source/: Grain.cpp  Grain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Type.h
MatrixMultiplier/: CMakeLists.txt
MatrixMultiplier/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MultiBandCompressor/: CMakeLists.txt
MultiBandCompressor/Source/: FilterBankVisualizer.h  MasterControl.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MultiEQ/: CMakeLists.txt
MultiEQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MultiEncoder/: CMakeLists.txt
MultiEncoder/Source/: EncoderList.h  EnergySpherePanner.h  MasterControlWithText.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
OmniCompressor/: CMakeLists.txt
OmniCompressor/Source/: LookAheadGainReduction.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ProbeDecoder/: CMakeLists.txt
ProbeDecoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
RoomEncoder/: CMakeLists.txt
RoomEncoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReflectionsVisualizer.h  reflections.h
SceneRotator/: CMakeLists.txt
SceneRotator/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleDecoder/: CMakeLists.txt
SimpleDecoder/Source/: DecoderInfoBox.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleDecoder/Source/Presets/: CUBE.json
StereoEncoder/: CMakeLists.txt
StereoEncoder/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ToolBox/: CMakeLists.txt
ToolBox/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_PluginTemplate/: CMakeLists.txt  howTo.md
_PluginTemplate/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
_configurationFiles/: CUBE.json
resources/: AmbisonicDecoder.h  AudioProcessorBase.h  Compressor.h  ConfigurationHelper.h  Delay.h  FeedbackDelayNetwork.h  FilterVisualizerHelper.h  IOHelper.h  LabelAttachment.h  MatrixMultiplication.h  MaxRE.h  MultiChannelDelay.h  MultiChannelGain.h  Quaternion.h  Queue.h  ReferenceCountedDecoder.h  ReferenceCountedMatrix.h  Weights.h  ambisonicTools.h  efficientSHvanilla.cpp  efficientSHvanilla.h  heatmap.h  inPhase.h  interpLagrangeWeights.h  tDesignN10.h  tDesignN7.h  viridis_cropped.h
resources/NewtonApple/: NewtonApple_hull3D.cpp  NewtonApple_hull3D.h
resources/OSC/: OSCInputStream.h  OSCParameterInterface.cpp  OSCParameterInterface.h  OSCStatus.cpp  OSCStatus.h  OSCUtilities.h
resources/Standalone/: IEM_AudioDeviceSelectorComponent.cpp  IEM_AudioDeviceSelectorComponent.h  IEM_JackAudio.h  MyStandaloneFilterWindow.h  StandaloneApp.cpp
resources/WalshHadamard/: fwht.h  mx_fwht.cpp  mx_ifwht.cpp  mx_sequency_perm.cpp
resources/customComponents/: CompressorVisualizer.h  DoubleSlider.h  FilterVisualizer.h  HammerAitovGrid.h  LevelMeter.h  MailBox.h  MuteSoloButton.h  OnOffButton.h  PositionPlane.h  ReverseSlider.h  RoundButton.h  SimpleLabel.h  SpherePanner.h  TitleBar.h  TitleBarPaths.h  XYPad.h
resources/lookAndFeel/: IEM_LaF.h
